master: small changes susy grid demo

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <li class="intend">math: fluid,</li>
           <li class="intend">output: float,</li>
           <li class="intend">gutter-position: after,</li>
-          <li class="intend">container: auto,</li>
+          <li class="intend highlight">container: 1200px,</li>
           <li class="intend">container-position: center,</li>
           <li class="intend highlight">columns: 12,</li>
           <li class="intend">gutters: .25,</li>
@@ -108,7 +108,7 @@
           <li class="intend">last-flow: to,</li>
           <li class="intend">debug: (</li>
           <li class="intend double highlight">image: show,</li>
-          <li class="intend double">color: rgba($gray-dark, .25),</li>
+          <li class="intend double highlight">color: rgba($gray-dark, .25),</li>
           <li class="intend double highlight">output: overlay,</li>
           <li class="intend double">toggle: top right,</li>
           <li class="intend double">),</li>
