--- a/index.html
+++ b/index.html
@@ -124,6 +124,21 @@
         <h2>7</h2>
       </div>
 
+      <div class="block eight">
+        <h2>8</h2>
+        <ul class="gallery">
+          <li class="gallery-item"><img src="assets/img/layout/square.png" /></li>
+          <li class="gallery-item"><img src="assets/img/layout/square.png" /></li>
+          <li class="gallery-item"><img src="assets/img/layout/square.png" /></li>
+          <li class="gallery-item"><img src="assets/img/layout/square.png" /></li>
+          <li class="gallery-item"><img src="assets/img/layout/square.png" /></li>
+          <li class="gallery-item"><img src="assets/img/layout/square.png" /></li>
+          <li class="gallery-item"><img src="assets/img/layout/square.png" /></li>
+          <li class="gallery-item"><img src="assets/img/layout/square.png" /></li>
+          <li class="gallery-item"><img src="assets/img/layout/square.png" /></li>
+        </ul>
+      </div>
+
     </div>
 
     <div class="block three">
